Update case in titles (Task HMT-584)
Fixed the case in titles (only first letter capitalized)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 
 <p><a class="btn dark" href="https://realwear.box.com/shared/static/63qvhoxvgf3xjl059myk8k04akios0f0.zip">Download Zip</a></p>
 
-<h3>Contents of Zip</h3>
+<h3>Contents of zip</h3>
 
 <ul>
 	<li>DeveloperExamples_1.2.apk - An installable version of the Developer Examples which can be installed on a HMT-1</li>
